Mon Apr 13 22:26:15 UTC 2009  James H. Hill  <hillj@isis.vanderbilt.edu>

        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/Main_Dialog.cpp:

          . Fixed compilation errors related the XSC updates.

        * cuts/idl:

          . Location of all CUTS IDL files.

Mon Apr 13 22:12:17 UTC 2009  James H. Hill  <hillj@isis.vanderbilt.edu>

        * cuts/arch/mpi:

          . Move the MPI backend to the architecture directory.

        * cuts/MPI:
        * cuts/MPI/CUTS_MPI.mpc:
        * cuts/MPI/Datatype_Port_Manager.h:
        * cuts/MPI/Datatype_Port_Manager.inl:
        * cuts/MPI/Datatype_Port_Manager.cpp:
        * cuts/MPI/MPI_Env.h:
        * cuts/MPI/MPI_Env.inl:
        * cuts/MPI/MPI_Env.cpp:
        * cuts/MPI/mpi.cpp:
        * cuts/MPI/mpi_export.def:

          Removed these files.

Mon Apr 13 22:01:48 UTC 2009  James H. Hill  <hillj@isis.vanderbilt.edu>

        * MPC/config/cuts_client_dnc.mpb:
        * MPC/config/cuts_component_dnc.mpb:
        * MPC/config/cuts_servant_dnc.mpb:
        * cuts/BDC/Benchmark_Data_Collector.idl:
        * cuts/BDC/Benchmark_Data_Collector.mpc:
        * cuts/BDC/Benchmark_Data_Collector_exec_i.h:
        * cuts/BDC/Benchmark_Data_Collector_exec_i.cpp:
        * cuts/BDC/client/client.mpc:
        * cuts/MPI/CUTS_MPI.mpc:
        * cuts/arch:
        * cuts/utils/Node_Daemon/Node_File_Reader.h:
        * cuts/utils/antispam/Antispam_Config_File.h:
        * cuts/utils/db/DB_Parameter.h:
        * cuts/utils/db/ODBC/ODBC_Parameter.h:
        * cuts/utils/db/ODBC/ODBC_Parameter.cpp:
        * cuts/utils/logging/server/Logging_Server_File.h:
        * cuts/utils/testing/Test_Configuration_File.h:
        * cuts/utils/unite/Unite_Config_File.h:
        * cuts/utils/unite/Unite_Datagraph_File.h:
        * default.features:

          . Updated CUTS to the latest version of ACE+TAO+CIAO.

        * cuts/arch/ccm:
        * cuts/arch/ccm/CCM_CoWorkEr_Proxy.h:
        * cuts/arch/ccm/CCM_CoWorkEr_Proxy.inl: