@@ -1,6 +1,6 @@
 // $Id$
 
-project (CUTS_BE_CAPI) : xerces, boost_base, picml_udm, cuts_be, cuts_cosmic {
+project (CUTS_BE_CAPI) : boost_base, picml_udm, cuts_be, cuts_cosmic {
   sharedname    = CUTS_BE_CAPI
   dynamicflags += CUTS_BE_CAPI_BUILD_DLL
 
